Bug 95356 - coldplug event shouldn't be used to determine which device to use
Summary: coldplug event shouldn't be used to determine which device to use
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-11 19:48 UTC by Daniel Drake
Modified: 2016-05-13 18:21 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Use device timeout instead of udev coldplug monitor (9.46 KB, patch)
2016-05-11 19:48 UTC, Daniel Drake
Details | Splinter Review

Description Daniel Drake 2016-05-11 19:48:02 UTC
Created attachment 123627 [details] [review]
Use device timeout instead of udev coldplug monitor

Even after earlier attempts to work around this, I'm back in the situation where the system will normally boot in text mode.

As discussed in https://lists.freedesktop.org/archives/systemd-devel/2015-March/029093.html , the udev coldplug event should not be used for plymouth to make it's decision to use text mode. A timeout would be a better option.

This fixes the problem.
Comment 1 Ray Strode [halfline] 2016-05-13 18:21:35 UTC
thanks pushed with minor changes.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.